Fix header spacing

--- a/static/css/feedback.css
+++ b/static/css/feedback.css
@@ -1,5 +1,3 @@
-/* @use postcss-nested;
-@use cssnext; */
 @import 'https://fonts.googleapis.com/css?family=Fjalla+One|Raleway';
 
 *, *:before, *:after {
@@ -146,7 +144,7 @@ a {
 }
 
 h1 {
-    text-transform: uppercase;
+    text-transform: none;
     font-size: 3.6rem;
     font-family: 'Raleway', sans-serif;
     padding: 1rem 0 0.5rem 0;
